--- a/_posts/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
+++ b/_posts/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
@@ -7,7 +7,7 @@ tags: MySQL
 ---
 一句话总结
 
-```
+```java
 SELECT count(*) FROM user WHERE id>0 GROUP BY name HAVING count(*)>1 ORDER BY count（*）DESC;<br />
 ```
 
