--- a/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
+++ b/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
@@ -9,7 +9,7 @@ tags:
 ---
 ### shell命令
 
-```
+```java
 nohup java -jar xxx.jar &
 ```
 
@@ -19,7 +19,7 @@ nohup java -jar xxx.jar &
 
 你也可以更改nohub.out文件为其他，
 
-```
+```java
 command >out.file 2>&1 &
 ```
 -command>out.file是将command的输出重定向到out.file文件，即输出内容不打印到屏幕上，而是输出到out.file文件中。
@@ -33,14 +33,14 @@ command >out.file 2>&1 &
 
 还有最关键的一步，在退出shell会话时，不可直接关闭程序，应输入命令
 
-```
+```java
 exit
 ```
 
 直接点关闭程序按钮关闭终端，会断掉该命令所对应的session，导致nohup对应的进程被通知需要一起shutdown。这或许是你此刻不成功的原因吧~
 
 示例
-```
+```java
 vi nohub.out //新建log文件
 chmod 777 ./nohub.out //赋予读+写+执行权限
 ```
