--- a/_posts/2018/2018-08-10-在执行jar包时如何使用调优参数.md
+++ b/_posts/2018/2018-08-10-在执行jar包时如何使用调优参数.md
@@ -8,7 +8,7 @@ tags: Java
 使用时去掉换行
 各参数百度获取
 
-```
+```java
 java -jar -Xms258m -Xmx258m -XX:PermSize=512M -XX:MaxPermSize=512m back-module.jar
  --spring.profiles.active=prod --server.port=8004
 
