--- a/_posts/2018/2018-09-19-Java多线程核心技术四Lock的使用.md
+++ b/_posts/2018/2018-09-19-Java多线程核心技术四Lock的使用.md
@@ -22,7 +22,7 @@ tags: 多线程
 
 下面是初步的程序示例：
 
-```
+```java
 public class Demo {
     private Lock lock = new ReentrantLock();
 
@@ -50,7 +50,7 @@ public class Demo {
 
 运行结果：
 
-```
+```java
 Thread-0 - 0
 Thread-0 - 1
 Thread-0 - 2
@@ -86,7 +86,7 @@ Thread-4 - 4
 
 示例代码：
 
-```
+```java
 public class MyService implements Runnable{
     private ReentrantLock lock = new ReentrantLock();
 
@@ -119,7 +119,7 @@ public class MyService implements Runnable{
 
 运行结果：
 
-```
+```java
 Thread-0锁定...
 Thread-2锁定...
 Thread-1锁定...
@@ -132,7 +132,7 @@ Thread-1解锁。
 
 示例代码：
 
-```
+```java
 public class MyService implements Runnable{
     private static ReentrantLock lock = new ReentrantLock();
 
@@ -165,7 +165,7 @@ public class MyService implements Runnable{
 
 运行结果：
 
-```
+```java
 Thread-0锁定...
 Thread-0解锁。
 Thread-1锁定...
@@ -184,7 +184,7 @@ Thread-2解锁。
 
 示例代码：
 
-```
+```java
 public class Demo {
     private Lock lock = new ReentrantLock();
     private Condition condition = lock.newCondition();
@@ -227,7 +227,7 @@ public class Demo {
 
 运行结果：
 
-```
+```java
 开始等待：1537352883839
 结束等待：1537352886839
 ```
@@ -242,7 +242,7 @@ public class Demo {
 
 示例代码：
 
-```
+```java
 public class Demo {
     private Lock lock = new ReentrantLock();
     private Condition conditionA = lock.newCondition();
@@ -304,7 +304,7 @@ public class Demo {
 
 运行结果：
 
-```
+```java
 A开始等待：1537354021740
 B开始等待：1537354021741
 B结束等待：1537354024738
@@ -320,7 +320,7 @@ B结束等待：1537354024738
 
 设置公平锁：
 
-```
+```java
 Lock lock = new ReentrantLock(true);
 ```
 
@@ -338,7 +338,7 @@ Lock lock = new ReentrantLock(true);
 
 示例代码：
 
-```
+```java
 public class Service {
     private ReentrantLock lock = new ReentrantLock();
 
@@ -371,7 +371,7 @@ public class Service {
 
 运行结果：
 
-```
+```java
 getHoldCount() 1
 getHoldCount() 2
 ```
@@ -380,7 +380,7 @@ getHoldCount() 2
 
 示例代码：
 
-```
+```java
 public class Service {
     private ReentrantLock lock = new ReentrantLock();
 
@@ -422,7 +422,7 @@ public class Service {
 
 运行结果：
 
-```
+```java
 Name: Thread-1
 有多少线程在等待：4
 ```
@@ -431,7 +431,7 @@ Name: Thread-1
 
 示例代码：
 
-```
+```java
 public class Service {
     private ReentrantLock lock = new ReentrantLock();
     private Condition condition = lock.newCondition();
@@ -477,7 +477,7 @@ public class Service {
 
 运行结果：
 
-```
+```java
 等待condition的线程数5
 ```
 
@@ -491,7 +491,7 @@ public class Service {
 
 1、2示例代码：
 
-```
+```java
 public class Service {
     private ReentrantLock lock = new ReentrantLock();
     private Condition condition = lock.newCondition();
@@ -535,7 +535,7 @@ public class Service {
 
 运行结果：
 
-```
+```java
 true
 false
 true
@@ -545,7 +545,7 @@ true
 
 示例代码：
 
-```
+```java
 public class Service {
     private ReentrantLock lock = new ReentrantLock();
     private Condition condition = lock.newCondition();
@@ -591,7 +591,7 @@ public class Service {
 
 运行结果：
 
-```
+```java
 有没有线程正在等待 condition ?true 线程数是多少？10
 ```
 
@@ -605,7 +605,7 @@ public class Service {
 
 更改上面的部分代码：
 
-```
+```java
 System.out.println(lock.isHeldByCurrentThread());
 System.out.println(lock.isLocked());
 lock.lock();
@@ -615,7 +615,7 @@ System.out.println(lock.isHeldByCurrentThread());
 
 运行结果：
 
-```
+```java
 false
 false
 true
@@ -650,7 +650,7 @@ true
 
 示例代码：
 
-```
+```java
 public class DThread{
     volatile private static int nextPrintWho = 1;
     private static ReentrantLock lock = new ReentrantLock();
@@ -730,7 +730,7 @@ public class DThread{
 
 打印结果：
 
-```
+```java
 ThreadA 1
 ThreadA 2
 ThreadA 3
@@ -752,19 +752,19 @@ ThreadC 3
 
 声明读写锁：
 
-```
+```java
 ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
 ```
 
 获取读锁：
 
-```
+```java
 lock.readLock().lock();
 ```
 
 获取写锁：
 
-```
+```java
 lock.writeLock().lock();
 ```
 
