--- a/_posts/2019/2019-04-02-Linux根据端口号查看进程PID.md
+++ b/_posts/2019/2019-04-02-Linux根据端口号查看进程PID.md
@@ -6,11 +6,11 @@ author: 薛勤
 tags: Linux
 ---
 1、命令lsof，以查找占用端口80为例，用法如下：
-```
+```java
 [root@localhost nginx]# lsof -i:80
 ```
 以上为没有进程占用80端口，
-```
+```java
 [root@localhost sbin]# lsof -i:80
 COMMAND  PID   USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
 nginx   8246   root    6u  IPv4  64233      0t0  TCP *:http (LISTEN)
@@ -19,13 +19,13 @@ nginx   8247 nobody    6u  IPv4  64233      0t0  TCP *:http (LISTEN)
 以上为进程ID为8246和8247的nginx应用，占用80端口。
 
 2、命令netstat，以查找占用80端口为例，用法如下：
-```
+```java
 [root@localhost sbin]# netstat -nlp|grep :80
 tcp        0      0 0.0.0.0:80                  0.0.0.0:*                   LISTEN      8246/nginx          
 ```
 3、命令ps，可以查看已知进程PID的执行目录的详细信息
 
-```
+```java
 [root@localhost sbin]# ps -ef | grep 8246
 root       8246      1  0 14:56 ?        00:00:00 nginx: master process ./nginx
 nobody     8247   8246  0 14:56 ?        00:00:00 nginx: worker process
