--- a/_posts/2019/2019-04-12-博客园页面嵌入左下角小女孩.md
+++ b/_posts/2019/2019-04-12-博客园页面嵌入左下角小女孩.md
@@ -6,7 +6,7 @@ author: 薛勤
 tags: HTML
 ---
 1.页面定制css 放上这个
-```
+```java
 /* 看板娘 */
 
 canvas#live2dcanvas {
@@ -16,7 +16,7 @@ left: 0;
 ```
 
 2.页脚Html代码放上这个 
-```
+```java
 /* 看板娘 */
 
 <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.0.4/lib/L2Dwidget.min.js"></script>
