--- a/_posts/2019/2019-09-19-位运算实现加减乘除四则运算Java.md
+++ b/_posts/2019/2019-09-19-位运算实现加减乘除四则运算Java.md
@@ -17,7 +17,7 @@ tags: 算法
 
 以`0101 + 0001 = 0110`为例分析如下：
 
-```
+```java
 //计算 0101 + 0001
 0101 ^ 0001 = 0100 //异或结果表明，如果不考虑进位，那么结果为0100
 0101 & 0001 = 0001 //与运算结果表明，最低位需要向次低位进1
@@ -96,7 +96,7 @@ public static int minus(int a, int b) {
 
 如果没有思路，可以先在纸上笔算二进制乘法的过程：
 
-```
+```java
         0101    a
     ×   0110    b
     ----------------
