--- a/_posts/2019/2019-10-25-Electron开发跨平台桌面程序入门教程.md
+++ b/_posts/2019/2019-10-25-Electron开发跨平台桌面程序入门教程.md
@@ -17,7 +17,7 @@ Electron 可以让你使用纯 JavaScript 调用丰富的原生(操作系统) AP
 
 本地环境：Node.js + npm
 
-```
+```java
 # 下面这行的命令会打印出Node.js的版本信息
 node -v
 
@@ -30,7 +30,7 @@ npm -vCopy
 
 从开发的角度来看, Electron application 本质上是一个 Node. js 应用程序。 与 Node.js 模块相同，应用的入口是 `package.json` 文件。 一个最基本的 Electron 应用一般来说会有如下的目录结构：
 
-```
+```java
 your-app/
 ├── package.json
 ├── main.js
@@ -43,7 +43,7 @@ your-app/
 
 其中package.json的文件内容如下：
 
-```
+```java
 {
   "name": "my-app",
   "version": "0.1.0",
@@ -63,7 +63,7 @@ your-app/
 
 在终端进入到工程文件夹下进行操作，会在当前目录下安装Electron。
 
-```
+```java
 # 局部安装 需要的话追加上 --registry='http://registry.npm.taobao.org' 使用淘宝npm源安装
 npm install electron --save-dev
 # Windows使用下面语句 64位32位机器都是--win32
@@ -77,7 +77,7 @@ node_modules/.bin/electron -v
 
 安装过程可能会很慢，正常的话，安装下载进度如下直至完成。
 
-```
+```java
 > electron@5.0.6 postinstall /home/qii/electron/eee/node_modules/electron
 > node install.js
 
@@ -96,7 +96,7 @@ found 0 vulnerabilities
 
 package.json中指定的入口点文件，即程序主文件。
 
-```
+```java
 const {app, BrowserWindow} = require('electron')
 
 let mainWindow
@@ -127,7 +127,7 @@ app.on('ready', createWindow)
 
 main.js中加载的主窗口文件，即主布局文件
 
-```
+```java
 <!DOCTYPE html>
 <html>
 <head>
@@ -144,7 +144,7 @@ main.js中加载的主窗口文件，即主布局文件
 
 在创建并初始化完成 `main.js`、 `index.html`和`package.json`之后，您就可以在当前工程的根目录执行下述命令来启动刚刚编写好的Electron程序了。
 
-```
+```java
 # 进入到包含 package.json 文件的目录
 npm satrt
 
@@ -160,7 +160,7 @@ node_modules/.bin/electron .
 
 ### 1、安装electron-builder
 
-```
+```java
 npm install --save-dev electron-builder
 
 # 验证安装
@@ -171,7 +171,7 @@ node_modules/.bin/electron-builder -h
 
 注意生成各自平台的程序包最好在对应平台上执行，否则可能打包失败
 
-```
+```java
 # Linux打包成AppImage文件（在Linux环境上执行）
 node_modules/.bin/electron-builder -l AppImage
 
@@ -200,7 +200,7 @@ node_modules/.bin/electron-builder -m dmg
 
 打开package.json文件，发现前面的 devDependencies 属性下已经多出了 electron 和 electron-builder 依赖，我们将与打包相关的配置信息全部写在build属性下，再添加脚本命令`"dist": "electron-builder"`。
 
-```
+```java
 {
   "name": "my-app",
   "version": "0.1.0",
@@ -250,7 +250,7 @@ node_modules/.bin/electron-builder -m dmg
 
 运行命令：
 
-```
+```java
 npm run dist
 ```
 
