--- a/_posts/2019/2019-11-26-我是如何从零学习开发一款跨平台桌面软件的Markdown编辑器.md
+++ b/_posts/2019/2019-11-26-我是如何从零学习开发一款跨平台桌面软件的Markdown编辑器.md
@@ -125,7 +125,7 @@ console.log(root)
 2)你可以在你的应用程序中使用Node.js的模块。 选择您最喜欢的 npm 模块。 npm 提供了目前世界上最大的开源代码库，那里包含良好的维护、经过测试的代码，提供给服务器应用程序的特色功能也提供给Electron。
 
 例如，在你的应用程序中要使用官方的AWS SDK，你需要首先安装它的依赖：
-```
+```java
 npm install --save aws-sdk
 ```
 然后在你的Electron应用中，通过require引入并使用该模块，就像构建Node.js应用程序那样：
