--- a/_posts/2018/2018-09-19-Java多线程核心技术五单例模式与多线程.md
+++ b/_posts/2018/2018-09-19-Java多线程核心技术五单例模式与多线程.md
@@ -11,7 +11,7 @@ tags: 多线程
 
 什么是立即加载？立即加载就是使用类的时候已经将对象创建完毕，常见的实现办法就是直接 new 实例化。
 
-```
+```java
 public class MyObject {
     private static MyObject myObject = new MyObject();
 
@@ -50,7 +50,7 @@ public class MyObject {
 
 打印结果：
 
-```
+```java
 985396398
 985396398
 985396398
@@ -66,7 +66,7 @@ public class MyObject {
 
 测试代码：
 
-```
+```java
 public class MyObject {
     private static MyObject myObject;
 
@@ -114,7 +114,7 @@ public class MyObject {
 
 打印结果：
 
-```
+```java
 985396398
 610025186
 21895028
@@ -128,7 +128,7 @@ public class MyObject {
 
 既然多个线程可以同时进入getInstance() 方法，那么只需要对其进行同步synchronized处理即可。
 
-```
+```java
 public class MyObject {
     private static MyObject myObject;
 
@@ -176,7 +176,7 @@ public class MyObject {
 
 打印结果：
 
-```
+```java
 961745937
 961745937
 961745937
@@ -188,7 +188,7 @@ public class MyObject {
 
 同步方法是对方法的整体加锁，这对运行效率来讲很不利的。改成同步代码块后：
 
-```
+```java
 public class MyObject {
     private static MyObject myObject;
 
@@ -238,7 +238,7 @@ public class MyObject {
 
 打印结果：
 
-```
+```java
 355159803
 355159803
 355159803
@@ -250,7 +250,7 @@ public class MyObject {
 
 所以，我们可以针对某些重要的代码进行单独的同步，而其他的代码则不需要同步。这样在运行时，效率完全可以得到大幅度提升。
 
-```
+```java
 public class MyObject {
     private static MyObject myObject;
 
@@ -300,7 +300,7 @@ public class MyObject {
 
 运行结果：
 
-```
+```java
 985396398
 21895028
 610025186
@@ -312,7 +312,7 @@ public class MyObject {
 
 在最后的步骤中，使用DCL双检查锁机制来实现多线程环境中的延迟加载单例设计模式。
 
-```
+```java
 public class MyObject {
     private volatile static MyObject myObject;
 
@@ -364,7 +364,7 @@ public class MyObject {
 
 运行结果：
 
-```
+```java
 860826410
 860826410
 860826410
@@ -384,7 +384,7 @@ volatile 在此处的作用是：
 
 DCL可以解决多线程单例模式的非线程安全问题。当然，还有许多其它的方法也能达到同样的效果。
 
-```
+```java
 public class MyObject {
     public static class  MyObjectHandle{
         private static MyObject myObject = new MyObject();
@@ -422,7 +422,7 @@ public class MyObject {
 
 打印结果：
 
-```
+```java
 1035057739
 1035057739
 1035057739
@@ -432,7 +432,7 @@ public class MyObject {
 
 解决方法就是在反序列化中使用readResolve()方法：
 
-```
+```java
 public class MyObject implements Serializable {
     //静态内部类
     public static class  MyObjectHandle{
@@ -467,7 +467,7 @@ public class MyObject implements Serializable {
 
 运行结果：
 
-```
+```java
 621009875
 调用了readResolve方法
 621009875
@@ -477,7 +477,7 @@ public class MyObject implements Serializable {
 
 静态代码块中的代码在使用类的时候就已经执行了，所以可以应用静态代码块的这个特点来实现单例设计模式。
 
-```
+```java
 public class MyObject {
     private static MyObject myObject = null;
     static {
@@ -512,7 +512,7 @@ public class MyObject {
 
 运行结果：
 
-```
+```java
 355159803
 355159803
 355159803
@@ -522,7 +522,7 @@ public class MyObject {
 
 枚举enum 和静态代码块的特性相似，在使用枚举类时，构造方法会被自动调用，也可以应用其这个特性实现单例设计模式。
 
-```
+```java
 public enum Singleton {
     INSTANCE;
     private MyObject myObject = null;
@@ -558,7 +558,7 @@ public enum Singleton {
 
 运行结果：
 
-```
+```java
 1516133987
 1516133987
 1516133987
@@ -566,7 +566,7 @@ public enum Singleton {
 
 这样实现的一个弊端就是违反了“职责单一原则”，完善后的代码如下：
 
-```
+```java
 public class MyObject {
     public enum Singleton {
         INSTANCE;
@@ -610,7 +610,7 @@ public class MyObject {
 
 运行结果：
 
-```
+```java
 610025186
 610025186
 610025186
