--- a/_posts/2019/2019-04-11-BAT面试题请使用递归构建N叉树.md
+++ b/_posts/2019/2019-04-11-BAT面试题请使用递归构建N叉树.md
@@ -197,7 +197,7 @@ public class SiteTree {
 
 打印输出：
 
-```
+```java
 Node{cid=1, pid=0, level='国', name='中国', child=[
 Node{cid=4, pid=1, level='省', name='山东省', child=[
 Node{cid=2, pid=4, level='市', name='济南市', child=[]}, 
