--- a/_posts/2019/2019-07-25-一文了解有趣的位运算.md
+++ b/_posts/2019/2019-07-25-一文了解有趣的位运算.md
@@ -11,7 +11,7 @@ tags: 算法
 
 口说无凭，举一个简单的例子来看下CPU是如何进行计算的，比如这行代码：
 
-```
+```java
 int a = 35;
 int b = 47;
 int c = a + b;
@@ -19,7 +19,7 @@ int c = a + b;
 
 计算两个数的和，因为在计算机中都是以二进制来进行运算，所以上面我们所给的int变量会在机器内部先转换为二进制在进行相加：
 
-```
+```java
 35:  0 0 1 0 0 0 1 1
 47:  0 0 1 0 1 1 1 1
 ————————————————————
@@ -48,7 +48,7 @@ int c = a + b;
 
 **运算规则**：
 
-```
+```java
 0&0=0  0&1=0  1&0=0  1&1=1
 ```
 
@@ -80,7 +80,7 @@ int c = a + b;
 
 **运算规则**：
 
-```
+```java
 0|0=0  0|1=1  1|0=1  1|1=1
 ```
 
@@ -102,7 +102,7 @@ int c = a + b;
 
 **运算规则**：
 
-```
+```java
 0^0=0  0^1=1  1^0=1  1^1=0
 ```
 
@@ -153,7 +153,7 @@ void Swap(int &a, int &b){
 **定义**：参加运算的一个数据，按二进制进行“取反”运算。
 **运算规则**：　
 
-```
+```java
 ~1=0
 ~0=1
 ```
