--- a/_posts/2019/2019-08-17-算法题解快速排序算法维基百科版.md
+++ b/_posts/2019/2019-08-17-算法题解快速排序算法维基百科版.md
@@ -94,7 +94,7 @@ public class QuickSort {
 
 在程序运行中，可以通过打印排序前和排序后的数列观察运行流程
 
-```
+```java
 对数组 [6 1 2 7 9 3 4 5 10 8 ] 排序， 排序后 [5 1 2 4 3 9 7 (6) 10 8 ] 
 对数组 [5 1 2 4 3 ] 排序， 排序后 [3 1 2 4 (5) 9 7 6 10 8 ] 
 对数组 [3 1 2 4 ] 排序， 排序后 [2 1 (3) 4 5 9 7 6 10 8 ] 
