--- a/_posts/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
+++ b/_posts/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
@@ -31,8 +31,8 @@ SHOW COLUMNS FROM table_name;
 ```
 
 ```sql
- /*使用数据库*/
-USE dataBase_name;
+/*使用数据库*/
+SE dataBase_name;
 ```
 
 ```sql
@@ -108,7 +108,7 @@ WHERE field1 ='somevalue1' [AND [OR]] filed2 = 'somevalue'
 **实例**
 
 ```sql
- SELECT * from runoob_tbl  WHERE runoob_author = 'Mary';
+SELECT * from runoob_tbl  WHERE runoob_author = 'Mary';
 ```
 
 # 5.Order by排序
@@ -140,7 +140,7 @@ WHERE field1 LIKE condition1 [AND [OR]] filed2 = 'somevalue'
 **实例**
 
 ```sql
- SELECT * from runoob_tbl  WHERE runoob_author LIKE '%Mary';
+SELECT * from runoob_tbl  WHERE runoob_author LIKE '%Mary';
 ```
 
 # 7.GROUP BY分组
