--- a/_posts/2019/2019-07-25-一文了解有趣的位运算.md
+++ b/_posts/2019/2019-07-25-一文了解有趣的位运算.md
@@ -179,42 +179,42 @@ void Swap(int &a, int &b){
 下面用代码去测试<<运算：
 
 ```java
-    /**
-     * 测试<<运算符
-     * 正数变为负数，说明带第一位符号位位移
-     */
-    @Test
-    public void test2() {
-        int i = Integer.parseInt("0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
-        System.out.println(i);
-        System.out.println(Integer.toBinaryString(i));
-        int x = i << 13;
-        System.out.println(x);
-        String s = Integer.toBinaryString(x);
-        System.out.println(s);
-//        1048575
-//        0000 0000 0000 1111 1111 1111 1111 1111
-//        -8192
-//        1111 1111 1111 1111 1110 0000 0000 0000
-    }
-    /**
-     * 测试<<运算符
-     * 负数变为正数，说明带第一位符号位位移
-     */
-    @Test
-    public void test3() {
-        int i = Integer.parseInt("-0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
-        System.out.println(i);
-        System.out.println(Integer.toBinaryString(i));
-        int x = i << 13;
-        System.out.println(x);
-        String s = Integer.toBinaryString(x);
-        System.out.println(s);
-//        -1048575
-//        1111 1111 1111 0000 0000 0000 0000 0001 （负数在机器上是以补码的形式存放的）
-//        8192
-//        0000 0000 0000 0000 0010 0000 0000 0000
-    }
+/**
+ * 测试<<运算符
+ * 正数变为负数，说明带第一位符号位位移
+ */
+@Test
+public void test2() {
+    int i = Integer.parseInt("0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
+    System.out.println(i);
+    System.out.println(Integer.toBinaryString(i));
+    int x = i << 13;
+    System.out.println(x);
+    String s = Integer.toBinaryString(x);
+    System.out.println(s);
+      1048575
+      0000 0000 0000 1111 1111 1111 1111 1111
+      -8192
+      1111 1111 1111 1111 1110 0000 0000 0000
+}
+/**
+ * 测试<<运算符
+ * 负数变为正数，说明带第一位符号位位移
+ */
+@Test
+public void test3() {
+    int i = Integer.parseInt("-0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
+    System.out.println(i);
+    System.out.println(Integer.toBinaryString(i));
+    int x = i << 13;
+    System.out.println(x);
+    String s = Integer.toBinaryString(x);
+    System.out.println(s);
+      -1048575
+      1111 1111 1111 0000 0000 0000 0000 0001 （负数在机器上是以补码的形式存放的）
+      8192
+      0000 0000 0000 0000 0010 0000 0000 0000
+}
 ```
 
 ### 2.6 右移运算符（>>）
@@ -228,42 +228,42 @@ void Swap(int &a, int &b){
 下面用代码去测试>>运算：
 
 ```java
-    /**
-     * 测试>>运算符
-     * 正数右移，左边补0
-     */
-    @Test
-    public void test4() {
-        int i = Integer.parseInt("0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
-        System.out.println(i);
-        System.out.println(Integer.toBinaryString(i));
-        int x = i >> 2;
-        System.out.println(x);
-        String s = Integer.toBinaryString(x);
-        System.out.println(s);
-//        1048575
-//        0000 0000 0000 1111 1111 1111 1111 1111
-//        262143
-//        0000 0000 0000 0011 1111 1111 1111 1111
-    }
-    /**
-     * 测试>>运算符
-     * 负数右移，左边补1
-     */
-    @Test
-    public void test5() {
-        int i = Integer.parseInt("-0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
-        System.out.println(i);
-        System.out.println(Integer.toBinaryString(i));
-        int x = i >> 2;
-        System.out.println(x);
-        String s = Integer.toBinaryString(x);
-        System.out.println(s);
-//        -1048575
-//        1111 1111 1111 0000 0000 0000 0000 0001（负数在机器上是以补码的形式存放的）
-//        -262144
-//        1111 1111 1111 1100 0000 0000 0000 0000
-    }
+/**
+ * 测试>>运算符
+ * 正数右移，左边补0
+ */
+@Test
+public void test4() {
+    int i = Integer.parseInt("0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
+    System.out.println(i);
+    System.out.println(Integer.toBinaryString(i));
+    int x = i >> 2;
+    System.out.println(x);
+    String s = Integer.toBinaryString(x);
+    System.out.println(s);
+      1048575
+      0000 0000 0000 1111 1111 1111 1111 1111
+      262143
+      0000 0000 0000 0011 1111 1111 1111 1111
+}
+/**
+ * 测试>>运算符
+ * 负数右移，左边补1
+ */
+@Test
+public void test5() {
+    int i = Integer.parseInt("-0000 0000 0000 1111 1111 1111 1111 1111".replaceAll(" ", ""), 2);
+    System.out.println(i);
+    System.out.println(Integer.toBinaryString(i));
+    int x = i >> 2;
+    System.out.println(x);
+    String s = Integer.toBinaryString(x);
+    System.out.println(s);
+      -1048575
+      1111 1111 1111 0000 0000 0000 0000 0001（负数在机器上是以补码的形式存放的）
+      -262144
+      1111 1111 1111 1100 0000 0000 0000 0000
+}
 ```
 
 ### 2.7 无符号右移（>>>）
