--- a/_posts/2020/2020-02-17-我一个二本大学是如何拿到阿里offer的.md
+++ b/_posts/2020/2020-02-17-我一个二本大学是如何拿到阿里offer的.md
@@ -25,7 +25,7 @@ tags:
 
 第二年，我放弃了喜爱的篮球，放弃了游戏，从 jsp、servlet、html 开始学习，搭建了一个自习室查询网页，并出售给了一个校公众号团队。
 
-我在大一下学期报了校软件设计大赛，并设计开发了一个微教务系统，原理是模拟登陆校教务系统，爬取成绩课表等信息，然后进行网页展示。获得了推荐奖，也就是没进前十名。校软件大赛举办的作用是选拔团队去参加山东省大学生软件设计大赛，虽然是推荐奖，但只要完成了作品，还是可以报销三百报名费的。就这样，我拨通了我妈的手机号，给我妈要了三百块钱。
+我在大一下学期报了校软件设计大赛，并设计开发了一个微教务系统，原理是模拟登陆校教务系统，爬取成绩课表等信息，然后进行网页展示。获得了推荐奖，也就是没进前十名。校软件大赛举办的作用是选拔团队去参加省大学生软件设计大赛，虽然是推荐奖，但只要完成了作品，还是可以报销三百报名费的。就这样，我拨通了我妈的手机号，给我妈要了三百块钱。
 
 在官网报名时才发现一个问题，每个团队最低三个人。
 
@@ -35,7 +35,7 @@ tags:
 
 我最终还是参加了这个比赛，我庆幸我有两个月的暑假可以去准备。在这两个月里，我抱着一本 Android 入门到精通的书籍，开始一章一章的做Demo。最后，我做了一个校园App，主要包括论坛发帖、点赞、评论功能，以及查成绩、查课表、看校园新闻等功能。
 
-我获得了齐鲁软件大赛作品完成奖，不是一、二、三等奖。所以，我的第一次软件大赛结果，失败。
+我获得了省软件大赛作品完成奖，不是一、二、三等奖。所以，我的第一次软件大赛结果，失败。
 
 大二上学期，我把我的这款校园App发给了校猿码工作室，成为工作室的一员。期间工作室计划了两个超级大项目，可惜最终都不了了之。
 
@@ -65,7 +65,7 @@ tags:
 
 大二暑假临近，非常热闹。
 
-这次我的团队很给力，指导老师也很给力。我们一起开会讨论做比赛！没错，还是山东省大学生软件设计大赛。这次，我想全力以赴。
+这次我的团队很给力，指导老师也很给力。我们一起开会讨论做比赛！没错，还是省大学生软件设计大赛。这次，我想全力以赴。
 
 我们用了一个多月去寻找我们究竟要做什么？我的导师特别想做一个医生机器人，还给我们看了相关的图片。我们的课题是大数据分析与挖掘。起初，我们压根没有头绪，走了非常非常多的弯路，怎么说呢。我去学了Hadoop，学完后发现项目规模太小，用不上。然后去学了Elasticsearch。最初的作品是一个网页对话窗口，集成思必驰语音合成接口，后端是Elasticsearch做的查询接口。非常简单（low）。
 
@@ -77,11 +77,11 @@ tags:
 
 导师要做知识图谱，可我要坚持做医疗诊断系统。在思考系统的算法逻辑时，我惊奇的发现，支撑诊断算法的正是知识图谱。当我在办公室里的小黑板手写算法思路，向队友、导师展示的时候，我那时非常开心，因为我终于知道了我要做什么。
 
-大三下学期开学后，我被通知作品进了二等奖，一等奖决赛即将在山东大学举办，让我务必准时参加决赛答辩。
+大三下学期开学后，我被通知作品进了二等奖，一等奖决赛即将举办，让我务必准时参加决赛答辩。
 
 答辩我准备的非常充分，而且，在决赛答辩之前，我就在另一个省级比赛中答辩过一次了，算是涨了一波经验。
 
-不负所望，我的作品获得山东省大学生软件大赛一等奖。
+不负所望，我的作品获得省大学生软件大赛一等奖。
 
 ## 05：开源作品爆发
 
@@ -139,7 +139,7 @@ tags:
 
 本以为自己已经掉队，本以为这个梦我马上就要清醒，但老天还是垂怜有梦想的人，我春招还是收获了腾讯的实习offer。
 
-## 08：秋招重新冲刺
+## 08：秋招重装上阵
 
 腾讯暑期实习后，我立马投入到秋招的备战状态，可这个时候，已经有很多朋友在提前批斩获offer。
 
