--- a/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
+++ b/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
@@ -5,7 +5,8 @@ date: 2019-06-23 10:04:00
 author: 薛勤
 tags: Neo4j
 ---
-> Create by github@yueshutong 2018-7-10
+
+> Create yster@foxmail.com 2018-7-10 侵权必究
 >
 > W3Cschool文档：https://www.w3cschool.cn/neo4j/neo4j_features_advantages.html
 >
