--- a/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
+++ b/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
@@ -7,7 +7,7 @@ tags:
   - Java
   - Linux
 ---
-### shell命令
+### 方法一
 
 ```java
 nohup java -jar xxx.jar &
@@ -17,30 +17,35 @@ nohup java -jar xxx.jar &
 
 `nohub`：nohup命令可以在你退出帐户之后继续运行相应的进程。nohup就是不挂起的意思( no hang up)。默认让程序控制台输出转移到nohub.out文件，位置在当前命令所在目录。
 
-你也可以更改nohub.out文件为其他，
+你也可以更改nohub.out文件为其他，比如：
 
 ```java
-command >out.file 2>&1 &
+nohup java -jar xxx.jar >out.file 2>&1 &
 ```
--command>out.file是将command的输出重定向到out.file文件，即输出内容不打印到屏幕上，而是输出到out.file文件中。
+- `>out.file1` 是将前面命令的输出重定向到 out.file 文件，即输出内容不打印到屏幕上，而是输出到 out.file 文件中。
 
--2>&1 是将标准出错重定向到标准输出，这里的标准输出已经重定向到了out.file文件，即将标准出错也输出到out.file文件中。
+- `2>&1` 是将标准出错重定向到标准输出，这里的标准输出已经重定向到了out.file文件，即将标准出错也输出到out.file文件中。
 
--最后一个&， 是让该命令在后台执行。
+- 最后一个`&`， 是让该命令在后台执行。
 
+如果你在执行命令后提示未找到命令，换下一种方法。
 
-### 退出
+### 方法二
 
-还有最关键的一步，在退出shell会话时，不可直接关闭程序，应输入命令
+执行命令后加 `&`:
 
 ```java
+java -jar xxx.jar &
+```
+
+还有最关键的一步，在退出shell会话时，不可直接关闭程序，应输入命令:
+
+```shell
 exit
 ```
 
-直接点关闭程序按钮关闭终端，会断掉该命令所对应的session，导致nohup对应的进程被通知需要一起shutdown。这或许是你此刻不成功的原因吧~
+直接点关闭程序按钮关闭终端，会断掉该命令所对应的session，导致当前后台进程被通知需要一起shutdown。这或许是你此刻不成功的原因吧~
 
-示例
-```java
-vi nohub.out //新建log文件
-chmod 777 ./nohub.out //赋予读+写+执行权限
-```
+---
+
+> 参考资料 [Linux jar包后台运行](https://blog.csdn.net/qq_30739519/article/details/51115075)
