--- a/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
+++ b/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
@@ -84,7 +84,7 @@ tar -zxvf neo4j-community-3.4.1.tar.gz
 
 访问`http://IP地址:7474/`, 出现下图即代表安装成功，顶部的$输入框用来执行下面的CQL语句。
 
-第一次访问需要修改密码，默认的账号密码都为neo4j
+第一次访问需要修改密码，默认的账号密码都为neo4j，以后若是修改密码，只需要在下图所示控制台输入`:server change-password`
 
 ![](./20190623史上最全面的Neo4j使用指南/28671768.png)
 
