--- a/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
+++ b/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
@@ -32,10 +32,10 @@ nohup java -jar xxx.jar >out.file 2>&1 &
 
 ### 方法二
 
-执行命令后加 `&`:
+先在执行的命令后加 `&`，`>out.log` 转移控制台输出到文件可加可不加:
 
-```java
-java -jar xxx.jar &
+```shell
+java -jar xxx.jar >out.log &
 ```
 
 还有最关键的一步，在退出shell会话时，不可直接关闭程序，应输入命令:
