--- a/_posts/2019/2019-03-26-我的面试宝典这些不会的话就别去面试了.md
+++ b/_posts/2019/2019-03-26-我的面试宝典这些不会的话就别去面试了.md
@@ -15,7 +15,7 @@ tags: 面经
 
 其它岗我不清楚，Java岗这块必问的东西，百分百包括：Java虚拟机、多线程、集合框架，这三点每次必问，知识点就那么些，多吗？其实不多。
 
-除了这三点，大概率会问到数据库、设计模式、算法。这些东西如果纯靠记忆的话，估计要背好久，而且还要保证面试时不被发现面试官发觉。看过我之前的文章我一个二本大学是如何拿到百度、网易大厂offer的！可能会对我的学习方法有所了解。那就是抄书，说句真心话这种方法好处显而易见，那就是扎实，缺点也显而易见，就是费时费力。如果你马上就要面试了，或者时间紧张，我建议你去阅读一些博客笔记，比如我的博客也可以作为你的一个参考。对于Java虚拟机这块，这种方法贼好使。
+除了这三点，大概率会问到数据库、设计模式、算法。这些东西如果纯靠记忆的话，估计要背好久，而且还要保证面试时不被发现面试官发觉。看过我之前的文章我是如何拿到大厂offer的！可能会对我的学习方法有所了解。那就是抄书，说句真心话这种方法好处显而易见，那就是扎实，缺点也显而易见，就是费时费力。如果你马上就要面试了，或者时间紧张，我建议你去阅读一些博客笔记，比如我的博客也可以作为你的一个参考。对于Java虚拟机这块，这种方法贼好使。
 
 ### 02│关键得靠脑子
 
@@ -93,14 +93,16 @@ ACID四个特性懂吧？让你解释也没问题吧？
 
 其它岗我不清楚，Java开发/研发岗对算法的要求并不高。我相信有过面试经历的人都会有这样的体会。
 
-个人觉得，刷完剑指offer上的题是基础。
+个人觉得，刷完剑指offer上的题只是基础。
 
-然后刷刷LeetCode上的题也是极好。
+然后再刷刷LeetCode上的题。
 
 ### 07│本文结语
 
 后面，我一是想要分享自己对一些知识的感悟，一方面就是介绍一部分开发上的技术技能。
 
-最近确实加了不少同学，我也尽力给了帮助和指导。但是我还有工作要做，所以建议大家尽量前往我的知识星球（薛勤的星球）一起进行交流。
+最近确实加了不少同学，我也尽力给了帮助和指导。但是我还有自己的工作要做，一天到晚也没时间去看微信，同学们如果有问题想问我，可以前往我的知识星球发表提问，有时间我会统一回复，而且一些重复的问题大件都可以看得到。
 
 如果你觉得不错，可以顺手点一个好看，甚至给我赞赏，那将会更加的鼓励我更好的创作。
+
+![](./20190326我的面试宝典这些不会的话就别去面试了/17987201.png)
