--- a/_posts/2019/2019-07-25-一文了解有趣的位运算.md
+++ b/_posts/2019/2019-07-25-一文了解有趣的位运算.md
@@ -168,7 +168,7 @@ void Swap(int &a, int &b){
 
 ~1的值为 1111 1111 1111 1110，再按"与"运算，最低位一定为0。因为“ ~”运算符的优先级比算术运算符、关系运算符、逻辑运算符和其他运算符都高。
 
-### 2.5 左移运算符（<<）
+### 2.5 左移运算符（`<<`）
 
 **定义**：将一个运算对象的各二进制位全部左移若干位（左边的二进制位丢弃，包括符号位0或1，右边补0）。
 
@@ -217,11 +217,11 @@ public void test3() {
 }
 ```
 
-### 2.6 右移运算符（>>）
+### 2.6 右移运算符（`>>`）
 
 **定义**：将一个数的各二进制位全部右移若干位，正数左补0，负数左补1，右边丢弃。
 
-**例如**：a=a>>2 将a的二进制位右移2位，左补0 或者 左补1得看被移数是正还是负。
+**例如**：`a=a>>2` 将a的二进制位右移2位，左补0 或者 左补1得看被移数是正还是负。
 
 **说明**：操作数每右移一位，相当于该数除以2。
 
@@ -266,13 +266,13 @@ public void test5() {
 }
 ```
 
-### 2.7 无符号右移（>>>）
+### 2.7 无符号右移（`>>>`）
 
 在计算机中负数采用二进制的补码表示，即10进制转为2进制得到的是原码，将原码除第一个符号位外按位取反得到的是反码，反码加1得到补码。
 
 二进制的最高位是符号位，0表示正，1表示负。
 
-\>>>与>>唯一的不同是它无论原来的最左边是什么数，统统都用0填充。
+`>>>`与`>>`唯一的不同是它无论原来的最左边是什么数，统统都用0填充。
 
 **举例**：-1的32进制位
 
@@ -316,7 +316,7 @@ a>>>2:  0011 1111 1111 1111 1111 1111 1111 1111  (无符号右移跟上个比起
 
 **3）**如果整形数据为无符号数，左边也补16个0
 
-例如：long a=123，unsigned intb=1，计算a&b.
+例如：`long a=123，unsigned int b=1`，计算`a&b`.
 
 ## 参考文章
 
