--- a/_posts/2020/2020-04-03-理解网络请求中的连接超时和读取超时.md
+++ b/_posts/2020/2020-04-03-理解网络请求中的连接超时和读取超时.md
@@ -20,7 +20,7 @@ connection.getResponseCode();
 
 ### ConnectTimeout
 
-连接超时。比如网络环境不好导致客户端与服务器建立 TCP 连接太慢，而我们又不想让程序一直卡在连接这一步不往下走，这时候就需要设置 ConnectTimeout 参数，当超过这个时间就赶紧报错吧。
+连接超时。比如网络环境不好导致客户端与服务器迟迟建立不了 TCP 连接，但是 Linux 系统默认的建立 TCP 连接的超时时间是 127 秒，又太长了，这时候就需要手动设置 ConnectTimeout 参数，当超过这个时间就赶紧报错吧。
 
 ### ReadTimeout
 
@@ -28,6 +28,6 @@ connection.getResponseCode();
 
 比如服务器去执行数据库操作，由于某些原因耗时很长，导致客户端迟迟没有收到服务器发送的数据，就可以设置 ReadTimeout 参数，超过这个时间我们就认为读取超时。
 
-很多时候我们下载一个大文件需要很长时间，为什么没有触发超时异常呢？这是因为服务器一直有数据响应给客户端，是不会触发响应超时的，只有当服务器在一段时间内一直没有数据发送给客户端，才会触发响应超时，断开 TCP 连接。
+很多时候我们下载一个大文件需要很长时间，为什么没有触发超时异常呢？这是因为服务器一直有数据发送给客户端，是不会触发读取超时的，只有当服务器在一段时间内没有任何数据发送给客户端，才会触发读取超时，断开 TCP 连接。
 
 看到这里，你应该明白了，所谓的连接超时、读取超时都是传输层的原因导致的，传输层的异常抛给应用层去处理。就这么简单。
