--- a/_posts/2020/2020-04-04-分享入职阿里巴巴一百天的所思所悟.md
+++ b/_posts/2020/2020-04-04-分享入职阿里巴巴一百天的所思所悟.md
@@ -10,11 +10,11 @@ tags: 人生经历
 
 加入阿里一百天了，这段时间我做了啥呢？
 
-![](https://imgkr.cn-bj.ufileos.com/9e34b891-5986-4411-b38b-4fb1ede868cc.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/35128248.png)
 
 其实说来，加入阿里一百天我就完成了一件事，那就是自己负责的项目经过开发、测试于4月3日正式上线了，当我写下通告全组的上线邮件时，心情还是不免有些激动的！
 
-![](https://imgkr.cn-bj.ufileos.com/b609e49d-5085-4db8-9f9a-90d15133308f.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/86525421.png)
 
 刚加入阿里的前三周吧，我基本上是全身心投入到学习中，这个学习不是学习什么书本知识，而是去学习我所在小组负责的项目和业务。然后，去参加答辩，让同事们去检验你的学习成果，顺便考察你的学习能力和业务理解能力。
 
@@ -26,7 +26,7 @@ tags: 人生经历
 
 有需求才有供应。不然，凭空想象嘛？
 
-![](https://imgkr.cn-bj.ufileos.com/bdee1fa2-640b-49db-a37f-93be53a1ad20.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/54012859.png)
 
 理解需求是研发技术的第一步，你还需要具备非常深厚的专业知识和研发经验。不然，你造出来的轮子千疮百孔，你觉得会有人用吗？而且，你自己恐怕也意识不到你的轮子究竟有哪些孔洞需要去补，没有一定的积累，造轮子除了爽之外没有多少技术提升。
 
@@ -34,7 +34,7 @@ tags: 人生经历
 
 想去造火箭是好事，说明你有上进心，但是，首先你得拧好螺丝。
 
-![](https://imgkr.cn-bj.ufileos.com/10e4b04c-9722-4ed5-b8cf-0d8e798b2f4b.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/57686707.png)
 
 当你离开校园，走进更高层次的圈子，经过不同思想火花的碰撞，你就会发现你很多坚持的、认为的，是错的。
 
@@ -56,19 +56,19 @@ tags: 人生经历
 
 经过两周时间，项目初步开发完成，我自己先对系统的一些接口进行模拟测试（自测），然后去打通我的上游，与上游一起进行流程测试（联调），主流程没有问题后，提交测试单（提测），测试人员会与我进行交接，开个会，拉个群。到了第二天，你会发现邮件爆满，全是测试人员提交的缺陷单。
 
-![](https://imgkr.cn-bj.ufileos.com/1a4a01b3-e6ec-4935-9836-f145fdb7f119.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/98012910.png)
 
 在这段沟通中，你须得有强大的心理素质和抗压能力，以及较高的情商和交际能力，不然，频繁的报错会让你怀疑自己的能力，心理素质不强者，甚至自暴自弃，觉得自己不适合这个行业。
 
 很荣幸，我的缺陷单突破两位数，可以说是惨不忍睹，原因就是没有进行充分的自测，太过于依赖测试人员，实际上，这个想法完完全全就是错的。这也是我第一次完成项目最大的经验积累。
 
-![](https://imgkr.cn-bj.ufileos.com/28fb4ba5-013d-4566-a98f-8751ad27f836.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/59260678.png)
 
 就在离项目上线还有一天的时间，突然爆出来个评估错误，需要对某一模块进行重构。要知道，发现这个问题的存在已经耗费了很长时间。当意识到原来的设计方案已经走不通了，师兄立马紧急研究新的方案，从开始研究到最后确定，只用了几分钟而已。
 
 方案确定了，资源也正在申请，开发当然就由我来完成了。由于对新方案所涉及的技术一点不懂，但是明天一定要做完，只能晚上加班阅读相关文档了。
 
-![](https://imgkr.cn-bj.ufileos.com/64e7464f-a953-4371-b317-a7f273e9b6ac.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/82950040.png)
 
 我先是去官网查看该技术的官方文档，心里有数之后再去 Github 看它的代码，这里不建议大家在 Github 网站在线查看，还是推荐 clone 到本地，看看 demo 就差不多搞明白了。第二天，如期完成开发和测试。
 
@@ -76,6 +76,6 @@ tags: 人生经历
 
 没工作前我特别讨厌说程序员就是只会拷贝和粘贴，没想到自己也这么干了，其实我觉得拷贝没有关系，有关系的是对拷贝的代码压根心里没数，当你对这段代码进行修修补补时就很容易出问题。也许你已经懂了这段代码的含义，但是拷贝的方案就是最好的方案吗？这次我比较遗憾的就是没有去重构我拷贝的这段代码。
 
-![](https://imgkr.cn-bj.ufileos.com/aa25eeb0-8f56-407d-a694-3a078e88316f.png)
+![](./20200404分享入职阿里巴巴一百天的所思所悟/65700761.png)
 
 一百天的分享就告一段落，如果觉得文章不错，可以订阅我的个人公众号“代码艺术”（ID：onblog），你会收到我所创作的最新推送！
