--- a/_posts/2018/2018-08-11-Nginx服务器的使用与反向代理负载均衡.md
+++ b/_posts/2018/2018-08-11-Nginx服务器的使用与反向代理负载均衡.md
@@ -168,13 +168,13 @@ Nginx 是一款可以通过反向代理实现负载均衡的服务器，使用 N
 默认配置文件`nginx.conf`  很重要，我们一般是新建一个配置文件，在启动时指定加载。
 
 ```java
-[root@yueshutong conf]# ls  //查看目录
+[root@hostname conf]# ls  //查看目录
 fastcgi.conf            koi-win             scgi_params
 fastcgi.conf.default    mime.types          scgi_params.default
 fastcgi_params          mime.types.default  uwsgi_params
 fastcgi_params.default  nginx.conf          uwsgi_params.default
 koi-utf                 nginx.conf.default  win-utf
-[root@yueshutong conf]# touch fzjh.conf  //新建负载均衡配置文件
+[root@hostname conf]# touch fzjh.conf  //新建负载均衡配置文件
 ```
 
 编辑`fzjh.conf`配置文件
