--- a/_posts/2019/2019-07-01-微服务架构下的分布式限流方案思考.md
+++ b/_posts/2019/2019-07-01-微服务架构下的分布式限流方案思考.md
@@ -100,7 +100,7 @@ ScheduledThreadExecutor.scheduleAtFixedRate(() ->
 
 ## 6.开源项目
 
-上面说了三种分布式限流方案的实现思路，这里推荐一个基于发票服务器思想实现的分布式限流项目SnowJean（https://github.com/yueshutong/SnowJena）。
+上面说了三种分布式限流方案的实现思路，这里推荐一个基于发票服务器思想实现的分布式限流项目SnowJean（https://github.com/ystcode/SnowJena）。
 
 笔者通过该项目源码观察到该限流项目在解决分布式限流上的有很多巧妙的点，比如，SnowJean内部使用观察者模式实现动态规则配置，使用工厂模式实现限流器的构造，使用建造者模式构建限流规则。
 
