--- a/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
+++ b/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
@@ -149,6 +149,6 @@ tags: 作品
 
 邮箱：<yster@foxmail.com>
 
-Github：[https://github.com/yueshutong/Doctor](https://github.com/yueshutong/Doctor)
+Github：[https://github.com/ystcode/Doctor](https://github.com/ystcode/Doctor)
 
 ## 完整代码包和数据库请加微信(CodeBlog)购买
