--- a/_posts/2019/2019-11-26-我是如何从零学习开发一款跨平台桌面软件的Markdown编辑器.md
+++ b/_posts/2019/2019-11-26-我是如何从零学习开发一款跨平台桌面软件的Markdown编辑器.md
@@ -151,7 +151,7 @@ const S3 = require('aws-sdk/clients/s3')
 
 关于 JustWrite 从构思到实践的心路历程大致就以上这些了，这次开发 JustWrite 也让我过了一把产品经理的瘾，基本已经满足了我的日常需求。如果你有更好的想法和创意也可以告诉我，说不定第二天就会实现了。
 
-Github：https://github.com/yueshutong/JustWrite
+Github：https://github.com/ystcode/JustWrite
 
 ## 视频演示
 
