--- a/_posts/2019/2019-09-24-程序员与HR的故事.md
+++ b/_posts/2019/2019-09-24-程序员与HR的故事.md
@@ -4,6 +4,7 @@ title: 《程序员与HR的故事》
 date: 2019-09-24 11:52:00
 author: HR小雪
 tags: 人生经历
+score: private
 ---
 
 ![](./20190924程序员与HR的故事/95866251.png)
