--- a/_posts/2019/2019-05-10-今天我想写一篇谈失败.md
+++ b/_posts/2019/2019-05-10-今天我想写一篇谈失败.md
@@ -4,6 +4,7 @@ title: 你能承受追梦路上的失败吗？
 date: 2019-05-10 23:26:00
 author: 薛勤
 tags: 人生经历
+score: private
 ---
 
 我觉得人生中最容易的事情就是失败了，啥都不需要做你就会失败，做而不得更是失败，失败的次数多了，便思考是否是自己太过高估自己，但不管是高估或者低估，失败依旧是失败，失败并不会随着你的谦虚或者骄傲的态度而改变，它只会影响你的内心，让你心灰意冷，所谓期望越大，失望越大正是如此。其实在心灰意冷之前你可以试想一下，假设你成功了，是否真的就能高枕无忧，亦或者真的得到可以一劳永逸，其实你心里应该明白，你所谓的失败或成功只是对于某个目标是否完成或达到某种预期的结果。  
