--- a/_posts/2019/2019-05-29-童年爱情故事凉拌青丝著.md
+++ b/_posts/2019/2019-05-29-童年爱情故事凉拌青丝著.md
@@ -4,6 +4,7 @@ title: 《童年爱情故事》凉拌青丝著
 date: 2019-05-29 15:54:00
 author: 薛勤
 tags: 人生经历
+score: private
 ---
 ![](./20190529童年爱情故事凉拌青丝著/1136672-20190825234116894-1038627855.png)
 
