--- a/_posts/2019/2019-11-30-我是如何被发小骗入刷单的传销骗局的.md
+++ b/_posts/2019/2019-11-30-我是如何被发小骗入刷单的传销骗局的.md
@@ -4,6 +4,7 @@ title: 我是如何被发小骗入刷单的传销骗局的...
 date: 2019-11-30 22:23:00
 author: 薛勤
 tags: 人生经历
+score: private
 ---
 
 > 传销诈骗，起源于“庞氏骗局”，即以后来人的钱发前面人的利益。
