--- a/_posts/2020/2020-05-28-算法题解回溯法解全排列.md
+++ b/_posts/2020/2020-05-28-算法题解回溯法解全排列.md
@@ -27,7 +27,7 @@ tags: 算法
 
 ### 解法一：插入法
 
-![](/Users/yueshutong/Library/Application Support/typora-user-images/image-20200528172845133.png)
+![img](./20200528算法题解回溯法解全排列/formatpng.png)
 
 解题思路：
 
@@ -82,7 +82,7 @@ public List<List<Integer>> permute(int[] nums) {
 
 **做题之前还是先画画图，找找规律。**
 
-![图片来自LeetCode](/Users/yueshutong/Library/Application Support/typora-user-images/image-20200528195800827.png)
+![图片来自LeetCode](./20200528算法题解回溯法解全排列/formatpng-20200831204006290.png)
 
 以绿色圈出部分为例，我们需要循环所有待排列数字，来选择下一个合适的数字：
 
@@ -147,7 +147,7 @@ private void dfs(int[] nums, int len, int deep, Deque<Integer> path, boolean[] u
 
 ### 解法一：插入法
 
-![](/Users/yueshutong/Library/Application Support/typora-user-images/image-20200528210007353.png)
+![](./20200528算法题解回溯法解全排列/formatpng-20200831204018079.png)
 
 解题思路：
 
@@ -196,7 +196,7 @@ public List<List<Integer>> permuteUnique(int[] nums) {
 
 ### 解法二：回溯法
 
-![图片来自LeetCode](/Users/yueshutong/Library/Application Support/typora-user-images/image-20200528212519615.png)
+![图片来自LeetCode](./20200528算法题解回溯法解全排列/formatpng-20200831204031740.png)
 
 解题思路：
 
@@ -243,3 +243,4 @@ private void dfs(int[] nums, int len, int deep, Deque<Integer> path, boolean[] u
     }
 }
 ```
+
