--- a/_posts/2018/2018-05-29-SpringMVC自定义403404500状态码返回页面.md
+++ b/_posts/2018/2018-05-29-SpringMVC自定义403404500状态码返回页面.md
@@ -20,7 +20,7 @@ import javax.servlet.http.HttpServletRequest;
 
 
 /**
- * Create by yster@foxmail.com 2018/5/27/027 21:51
+ * Create by codeblog@qq.com 2018/5/27/027 21:51
  */
 @Controller
 public class ExceptionController implements ErrorController {
