--- a/_posts/2018/2018-07-23-Netty入门三之web服务器.md
+++ b/_posts/2018/2018-07-23-Netty入门三之web服务器.md
@@ -32,7 +32,7 @@ tags: Netty
 ```java
 /**
  * Netty服务器启动
- * Create by yster@foxmail.com 2018-05-04
+ * Create by codeblog@qq.com 2018-05-04
  **/
 public class HttpServerStartup {
     public void startup() {
@@ -62,7 +62,7 @@ public class HttpServerStartup {
 ```java
 /**
  * 信道初始化
- * Create by yster@foxmail.com 2018-05-04
+ * Create by codeblog@qq.com 2018-05-04
 **/
 public class MyServerInitializer extends ChannelInitializer<SocketChannel> {
     @Override
@@ -91,7 +91,7 @@ public class MyServerInitializer extends ChannelInitializer<SocketChannel> {
 ```java
 /**
  * 绑定处理程序中的简单通道
- * Create by yster@foxmail.com 2018-05-04
+ * Create by codeblog@qq.com 2018-05-04
  **/
 @Sharable
 public class MyServerChannelHandler extends SimpleChannelInboundHandler<HttpObject> {
