--- a/_posts/2018/2018-10-12-海纳百川而来的一篇相当全面的JavaNIO教程.md
+++ b/_posts/2018/2018-10-12-海纳百川而来的一篇相当全面的JavaNIO教程.md
@@ -2115,7 +2115,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 /**
- * Create by yster@foxmail.com 2018/10/11 17:44
+ * Create by codeblog@qq.com 2018/10/11 17:44
  */
 public class Server {
     private Selector selector;
@@ -2260,7 +2260,7 @@ import java.nio.channels.spi.SelectorProvider;
 import java.util.Iterator;
 
 /**
- * Create by yster@foxmail.com 2018/10/11 16:36
+ * Create by codeblog@qq.com 2018/10/11 16:36
  */
 public class Client {
 
