--- a/_posts/2019/2019-05-13-Java如何执行操作系统的CMD命令行.md
+++ b/_posts/2019/2019-05-13-Java如何执行操作系统的CMD命令行.md
@@ -27,7 +27,7 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 
 /**
- * Create by yster@foxmail.com 2018/11/9 0009 22:28
+ * Create by codeblog@qq.com 2018/11/9 0009 22:28
  */
 public class ExecuteCmd {
     /**
