--- a/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
+++ b/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
@@ -147,8 +147,8 @@ tags: 作品
 
 ## 项目地址
 
-邮箱：<yster@foxmail.com>
+邮箱：<codeblog@qq.com>
 
-Github：[https://github.com/ystcode/Doctor](https://github.com/ystcode/Doctor)
+Github：[https://github.com/onblog/Doctor](https://github.com/onblog/Doctor)
 
 ## 完整代码包和数据库请加微信(CodeBlog)购买
