--- a/_posts/2018/2018-04-04-Java实现一个简单的加密解密方法.md
+++ b/_posts/2018/2018-04-04-Java实现一个简单的加密解密方法.md
@@ -20,7 +20,7 @@ content，pass均为String类型 content为明文，pass为加密口令，cipher
 ```java
 /**
  * 时间：2007-11-14 
- * yster@foxmail.com
+ * codeblog@qq.com
  */
 public class Enande {
     /**
