--- a/_posts/2018/2018-04-12-任务调度工具Quartz入门笔记.md
+++ b/_posts/2018/2018-04-12-任务调度工具Quartz入门笔记.md
@@ -35,7 +35,7 @@ import org.quartz.JobExecutionException;
 import org.quartz.JobKey;
 import org.quartz.Trigger;
 /**
- * Created by yster@foxmail.com
+ * Created by codeblog@qq.com
  * 2018年4月9日 下午11:00:52
 */
 public class HelloJob implements Job {
@@ -106,7 +106,7 @@ import org.quartz.Trigger;
 import org.quartz.impl.StdSchedulerFactory;
 
 /**
- * Created by yster@foxmail.com 2018年4月9日 下午10:57:14
+ * Created by codeblog@qq.com 2018年4月9日 下午10:57:14
  */
 public class QuartzTest {
 
