--- a/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
+++ b/_posts/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
@@ -4,6 +4,7 @@ title: 基于知识图谱的医疗诊断系统论文
 date: 2019-08-31 13:46:00
 author: 薛勤
 tags: 作品
+score: private
 ---
 本作品禁止任何人/企业申请专利，禁止任何人使用本作品参加任何比赛或作为毕业设计，如使用本作品源码进行商业用途务必联系作者。
 
