--- a/_posts/2020/2020-04-04-分享我入职阿里巴巴一百天的所思所悟.md
+++ b/_posts/2020/2020-04-04-分享我入职阿里巴巴一百天的所思所悟.md
@@ -1,19 +1,18 @@
 ---
 layout: post
-title: 分享我入职阿里巴巴一百天的所思所悟
+title: 我在阿里巴巴实习一百天的所思所悟
 date: 2020-04-04 16:00:00
 author: 薛勤
 tags: 人生经历
-score: private
 ---
 
-非常高兴的告诉大家，我已经入职阿里巴巴一百天了。一百天，是一个非常有纪念性的日子，也许你已经忘记你的百天照咋拍的，但是你的女盆友一定会提醒你别忘了百天纪念日给她买礼物。
+非常高兴的告诉大家，我已经在阿里巴巴实习一百天了。一百天，是一个非常有纪念性的日子，也许你已经忘记你的百天照咋拍的，但是你的女盆友一定会提醒你别忘了百天纪念日给她买礼物。
 
-加入阿里一百天了，这段时间我做了啥呢？
+在阿里工作一百天了，这段时间我做了啥呢？
 
 ![](./20200404分享入职阿里巴巴一百天的所思所悟/35128248.png)
 
-其实说来，加入阿里一百天我就完成了一件事，那就是自己负责的项目经过开发、测试于4月3日正式上线了，当我写下通告全组的上线邮件时，心情还是不免有些激动的！
+其实说来，阿里工作一百天我就完成了一件事，那就是自己负责的项目经过开发、测试于4月3日正式上线了，当我写下通告全组的上线邮件时，心情还是不免有些激动的！
 
 ![](./20200404分享入职阿里巴巴一百天的所思所悟/86525421.png)
 
@@ -79,4 +78,4 @@ score: private
 
 ![](./20200404分享入职阿里巴巴一百天的所思所悟/65700761.png)
 
-一百天的分享就告一段落，如果觉得文章不错，可以订阅我的个人公众号“代码艺术”（ID：onblog），你会收到我所创作的最新推送！
+一百天的分享就告一段落，如果觉得文章不错，可以订阅我的个人公众号“代码艺术”（ID：onblog），你会收到我所创作的最新内容！
