--- a/_posts/2020/2020-04-04-分享我入职阿里巴巴一百天的所思所悟.md
+++ b/_posts/2020/2020-04-04-分享我入职阿里巴巴一百天的所思所悟.md
@@ -4,6 +4,7 @@ title: 我在阿里巴巴实习一百天的所思所悟
 date: 2020-04-04 16:00:00
 author: 薛勤
 tags: 人生经历
+top: true
 ---
 
 非常高兴的告诉大家，我已经在阿里巴巴实习一百天了。一百天，是一个非常有纪念性的日子，也许你已经忘记你的百天照咋拍的，但是你的女盆友一定会提醒你别忘了百天纪念日给她买礼物。
