--- a/_posts/2020/2021-01-06-如何搭建Jekyll个人博客网站.md
+++ b/_posts/2020/2021-01-06-如何搭建Jekyll个人博客网站.md
@@ -6,7 +6,6 @@ author: 薛师兄
 tags: Jekyll
 ---
 
-
 1、购买一台Centos系统的服务器
 
 推荐使用腾讯云，网速快，性能稳定，客服处理问题及时，现在点这条链接就可以享受2折优惠：https://curl.qcloud.com/zjig4QkV
@@ -46,7 +45,7 @@ make
 sudo make install
 ```
 
- 安装完之后修改gem的源为国内，不然很慢
+安装完之后修改gem的源为国内，不然很慢
 
 ```shell
 gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/
@@ -103,3 +102,6 @@ grm install jekyll-feed -v 0.12
 jekyll serve --host 0.0.0.0  --port 80 --detach
 ```
 
+### FAQ
+
+如果你克隆的项目下有 Gemfile.lock 文件记得删除。
