--- a/_posts/2020/2021-01-06-如何搭建Jekyll个人博客网站.md
+++ b/_posts/2020/2021-01-06-如何搭建Jekyll个人博客网站.md
@@ -8,7 +8,7 @@ tags: Jekyll
 
 1、购买一台Centos系统的服务器
 
-推荐使用腾讯云，网速快，性能稳定，客服处理问题及时，现在点这条链接就可以享受2折优惠：https://curl.qcloud.com/zjig4QkV
+推荐使用腾讯云，网速快，性能稳定，客服处理问题及时，现在点这条链接就可以享受2折优惠：<https://curl.qcloud.com/zjig4QkV>
 
 2、安装Git
 
