--- a/_posts/2021/2021-01-24-Github网站的图片不显示如何解决.md
+++ b/_posts/2021/2021-01-24-Github网站的图片不显示如何解决.md
@@ -26,7 +26,7 @@ tags: Github
 
 ![](./20210124Github网站的图片不显示如何解决/image-20210124180918460.png)
 
-将IP地址复制，修改本地hosts文件即可。
+将IP地址复制，粘贴到本地hosts文件。
 
 最后，再次访问Github，可以看到控制台已经没有红色的报错了。
 
@@ -34,7 +34,7 @@ tags: Github
 
 ## 成果
 
-小伙伴们只需要把我下面整理好的复制到自己电脑hosts文件就可以。
+大功告成，小伙伴们只需要把我下面整理好的复制到自己电脑hosts文件就可以啦！
 
 ```
 151.101.184.133    assets-cdn.github.com
