--- a/_posts/2020/2020-02-23-Java并发编程需要解决的三大问题.md
+++ b/_posts/2020/2020-02-23-Java并发编程需要解决的三大问题.md
@@ -36,35 +36,31 @@ tags: 多线程
 
 ```java
 public class PrintString implements Runnable{
-    private boolean isContinuePrint = true;
+    private boolean isRunnning = true;
 
     @Override
     public void run() {
-        while (isContinuePrint){
-            System.out.println("Thread: "+Thread.currentThread().getName());
-            try {
-                Thread.sleep(1000);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
+        System.out.println("Thread begin: "+Thread.currentThread().getName());
+        while (isRunnning == true){
         }
+        System.out.println("Thread end: "+Thread.currentThread().getName());
     }
 
-    public boolean isContinuePrint() {
-        return isContinuePrint;
+    public boolean isRunnning() {
+        return isRunnning;
     }
 
-    public void setContinuePrint(boolean continuePrint) {
-        isContinuePrint = continuePrint;
+    public void setRunnning(boolean runnning) {
+        isRunnning = runnning;
     }
 
     public static void main(String[] args) throws InterruptedException {
         PrintString printString = new PrintString();
         Thread thread = new Thread(printString,"Thread-A");
         thread.start();
-        Thread.sleep(100);
+        Thread.sleep(1000);
+        printString.setRunnning(false);
         System.out.println("我要停止它！" + Thread.currentThread().getName());
-        printString.setContinuePrint(false);
     }
 }
 ```
