--- a/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
+++ b/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
@@ -20,7 +20,7 @@ tags:
 
 漏桶算法思路很简单，水（请求）先进入到漏桶里，漏桶以一定的速度出水，当水流入速度过大会直接溢出，可以看出漏桶算法能强行限制数据的传输速率。
 
-![](/Users/yueshutong/Downloads/typore-img/081225378155003.png)
+![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081225378155003.png)
 
 但是这种算法的弊端是不支持某种程度上的流量突发情况，所以更多时候我们是选择“令牌桶算法”。
 
@@ -28,19 +28,19 @@ tags:
 
 令牌桶算法的原理是系统会以一个恒定的速度往桶里放入令牌，而如果请求需要被处理，则需要先从桶里获取一个令牌，当桶里没有令牌可取时，则拒绝服务。
 
-![](/Users/yueshutong/Downloads/typore-img/081226107372877.png)
+![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081226107372877.png)
 
 ### 固定时间窗口算法
 
 以统计 QPM （每分钟查询率）为例，我们设置每分钟允许通过的请求次数为 60 ，那么每 60 秒的时间窗口最大只能接收 60 个请求，如下图所示：
 
-![](/Users/yueshutong/Downloads/typore-img/image-20210209183710683.png)
+![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/image-20210209183710683.png)
 
 这是一种最简单的统计方式，即统计每一个时间窗口的**计数**，但这种方式的缺点是什么？
 
 如果在 50 秒到 60 秒之间来了 60 个请求，在 60 秒到 110 秒之间又来了 60 个请求，那么在 50 秒到 110 秒这 1 分钟的时间段就会允许  120 个请求通过，这根本不满足我们定义的规则：即每分钟允许通过 60 个请求。该过程如下图所示：
 
-![](/Users/yueshutong/Downloads/typore-img/image-20210209183728797.png)
+![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/image-20210209183728797.png)
 
 ### 滑动时间窗口算法
 
@@ -48,7 +48,7 @@ tags:
 
 我们可以将一个时间窗口分割为多个时间窗口，使窗口指针随着时间往后移动。
 
-![](/Users/yueshutong/Downloads/typore-img/image-20210209181708245.png)
+![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/image-20210209181708245.png)
 
 如上图所示，我们将 1 分钟大小的时间窗口分割为 2 个窗口，每个时间窗口各占 30 秒。其中一个指针指向当前时间所属的时间窗口， 另一个指针指向下一个时间窗口。
 
