--- a/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
+++ b/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 限流算法:令牌桶,漏桶,固定时间窗口,滑动时间窗口
+title: 四种限流算法(令牌桶,漏桶,固定时间窗口,滑动时间窗口)
 date: 2021-02-09 16:00:00
 author: 薛师兄
 tags:
